fix: Remove overflow x do body

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body {
   font-family: "Inter", sans-serif;
   color: var(--main-black-color);
   background-color: var(--main-background-color);
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
